fix footer on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -100,20 +100,7 @@ nav > a {
   font-weight: bold;
 }
 
-.footer {
-  font-family: Poppins, sans-serif;
-  display: flex;
-  align-items: end;
-  height: 200px;
-  padding: 2rem;
-}
-
-.footer-nav {
-  display: flex;
-  flex-direction: column;
-}
-
-.social-icons {
+.social-icon {
   height: 75px;
 }
 
@@ -127,28 +114,14 @@ nav > a {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 1000px) {
-  .footer {
-    width: 288px;
-    padding: 125px 0 0 0;
-    background-image: url("../img/Watercolor Theme 2 (1).png");
-    background-position: center;
-    background-size: cover;
-    margin-top: 5rem;
-    flex-direction: column;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.footer-nav {
+  width: 100%;
+}
 
+@media (min-width: 768px) {
   .footer-nav {
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .social-icons {
-    height: 55px;
+    height: 10rem;
+    width: auto;
   }
 }
 
